# cla-rust

./: .gitignore  .packit.yaml  Cargo.toml  README.md  architecture.md
.github/workflows/: ci.yml
crates/clad/: Cargo.toml  config.toml.example
crates/clad/src/: config.rs  main.rs  openai.rs  provider.rs  proxy.rs  state.rs
crates/clad/src/provider/: lightspeed_core.rs  rhel_lightspeed.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  helpers.rs  main.rs
crates/cli/src/commands/: chat.rs  history.rs  mod.rs  shell.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: man.rs  xtask.rs
docs/: book.toml
docs/src/man/: c.1.md  clad.8.md  command-line-assistant.1.md
packaging/: cla-rust.spec
