[package]
name = "clad"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clad"
path = "src/main.rs"

[dependencies]
# Web framework for handling HTTP requests
axum = "0.7"
tokio = { version = "1", features = ["full"] }
# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP client for forwarding requests
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
# Async streams for handling SSE responses
futures = "0.3"
tokio-stream = "0.1"
# TOML configuration parsing
toml = "0.8"
# Tower for middleware support
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
# UUID generation (cryptographically secure)
uuid = { version = "1.0", features = ["v4"] }
# Rate limiting
tower_governor = "0.4"
# For structured errors
thiserror = "2.0"

[dev-dependencies]
# Testing utilities
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"


