[package]
name = "clad"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "clad"
path = "src/main.rs"

[dependencies]
# Crate-specific dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
futures = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
serde =  { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
toml = "0.9.7"

[dev-dependencies]
# Testing utilities
http-body-util = "0.1"

[lints]
workspace = true
