[package]
name = "c"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
# Crate-specific dependencies
etcetera = "0.10.0"
once_cell = "1.21.3"
log = "0.4"
env_logger = "0.11"
fs2 = "0.4.3"
anyhow = "1.0.100"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
clap = { version = "4.5", features = ["derive"] }
clap_mangen = {version = "0.2.29", optional = true}

[lints]
workspace = true

[[bin]]
name = "c"
path = "src/main.rs"

[features]
# Implementation detail of man page generation.
docgen = ["clap_mangen"]
