[package]
name = "cli"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
# Crate-specific dependencies
etcetera = "0.10.0"
once_cell = "1.21.3"
log = "0.4"
env_logger = "0.11"
fs2 = "0.4.3"
anyhow = "1.0.100"
serde_json = "1.0.145"
tempfile = "3.23.0"
clap = { version = "4.5", features = ["derive"] }

[lints]
workspace = true

[[bin]]
name = "c"
path = "src/main.rs"
