# See https://github.com/matklad/cargo-xtask
# This is an implementation detail of bootc
[package]
name = "xtask"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/xtask.rs"

[dependencies]
# Crate-specific dependencies
serde = { version = "1.0.145", features = ["derive"]}
mandown = "1.1.0"
tar = "0.4"
anstream = "0.6.21"
camino = "1.2.1"
chrono = "0.4.42"
fn-error-context = "0.2.1"
owo-colors = "4.2.3"
xshell = "0.2.7"
anyhow = "1.0.100"
serde_json = "1.0.145"
toml = "0.9.7"
tempfile = "3.23.0"

[lints]
workspace = true
